# bookpie

./: .gitignore  Cargo.toml  credential.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  task.md  tsconfig.json  vitest.config.ts
apps/api/: .env.example  Cargo.toml
apps/api/migrations/: 0001_auth.sql  0002_catalog.sql  0003_cart.sql  0004_auth_flows.sql  0005_profiles.sql  0006_inventory.sql  0007_orders_delivery.sql  0008_admin_user_status.sql  0009_seed_demo_data.sql  0010_saved_payment_methods.sql  0011_catalog_extensions.sql  0012_inventory_operations.sql  0013_search_analytics.sql  0014_order_tax_total.sql  0014_payment_providers.sql  0015_delivery_management.sql  0016_promotions.sql  0017_notifications.sql  0018_reviews.sql  0019_security_audit.sql  0020_performance_indexes.sql  0021_reconcile_order_totals.sql
apps/api/src/: cache.rs  config.rs  db.rs  error.rs  main.rs  response.rs  state.rs
apps/api/src/middleware/: auth.rs  security.rs
apps/api/src/models/: ids.rs
apps/api/src/modules/: mod.rs
apps/api/src/modules/admin/: controller.rs  model.rs  repository.rs  service.rs
apps/api/src/modules/analytics/: controller.rs  model.rs  repository.rs  service.rs
apps/api/src/modules/auth/: controller.rs  model.rs  repository.rs  service.rs
apps/api/src/modules/books/: controller.rs  model.rs  repository.rs  service.rs
apps/api/src/modules/carts/: controller.rs  model.rs  repository.rs  service.rs
apps/api/src/modules/delivery/: controller.rs  model.rs  repository.rs  service.rs
apps/api/src/modules/inventory/: controller.rs  model.rs  repository.rs  service.rs
apps/api/src/modules/notifications/: controller.rs  model.rs  repository.rs  service.rs
apps/api/src/modules/orders/: controller.rs  model.rs  repository.rs  service.rs
apps/api/src/modules/profiles/: controller.rs  model.rs  repository.rs  service.rs
apps/api/src/modules/promotions/: controller.rs  model.rs  repository.rs  service.rs
apps/api/src/repositories/: mod.rs
apps/api/src/routes/: docs.rs  health.rs  mod.rs
apps/api/src/services/: mod.rs
(+230 files in other folders)
