[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
argon2 = "0.5.3"
axum = { version = "0.8.4", features = ["macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
hex = "0.4.3"
jsonwebtoken = "9.3.1"
rand_core = { version = "0.6.4", features = ["getrandom"] }
redis = { version = "0.27.6", features = ["tokio-comp"] }
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
